fix: Added the link from user to client. (#161)
